# TSYDisruptorDetecter

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yml
bot/: .yarnrc.yml  drizzle.config.ts  package.json
bot/drizzle/: 0000_cloudy_magma.sql
bot/drizzle/meta/: 0000_snapshot.json  _journal.json
bot/src/: index.ts
bot/src/commands/: toggle.ts
bot/src/db/: schema.ts
bot/src/lib/: notifyer.ts  setup.ts
bot/src/scheduled-tasks/: runScraper.ts
cli/: Cargo.toml
cli/src/: differ.rs  main.rs
cli/src/migrations/: engine.rs
src/: differ.rs  main.rs
src/migrations/: engine.rs
